Make jdk class reader compatible with java 11